[package]
name = "loader"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axstd = { workspace = true, optional = true, features = ["alloc"] }
elf = { version = "0.7.4", default-features = false, features = [] }
printf-compat = { version = "0.1.1", default-features = false }
