[package]
name = "arceos-loader"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { workspace = true }
axlog = { workspace = true }
elf = { git = "https://github.com/cole14/rust-elf/", commit = "cdc6769", default-features = false, features = ["to_str"] }
